--- a/dotfiles/i3wm/polybar/modules.ini
+++ b/dotfiles/i3wm/polybar/modules.ini
@@ -227,8 +227,8 @@ format = <label>
 label-font = 3
 # label-padding-left = 1
 format-foreground = ${colors.foreground}
-click-left = firefox
-click-right = firefox --private-window
+click-left = /home/john/myrepo/myscripts/launchers/quick-launch.sh web main
+click-right = /home/john/myrepo/myscripts/launchers/quick-launch.sh web side
 
 [module/obsidian]
 type = custom/script
@@ -236,7 +236,8 @@ exec = echo " "
 format = <label>
 label-font = 3
 format-foreground = ${colors.foreground}
-click-left = obsidian
+click-left = /home/john/myrepo/myscripts/launchers/quick-launch.sh note main
+click-right = /home/john/myrepo/myscripts/launchers/quick-launch.sh note side
 
 [module/files]
 type = custom/script
@@ -244,7 +245,8 @@ exec = echo " "
 format = <label>
 label-font = 3
 format-foreground = ${colors.foreground}
-click-left = thunar
+click-left = /home/john/myrepo/myscripts/launchers/quick-launch.sh file main
+click-right = /home/john/myrepo/myscripts/launchers/quick-launch.sh file side
 
 ;================================
 ;   Misc
