--- a/dotfiles/archbook/hypr/hyprland.conf
+++ b/dotfiles/archbook/hypr/hyprland.conf
@@ -159,7 +159,7 @@ device {
 
 device {
   name = asup1411:00-093a:200b-touchpad
-  sensitivity = -0.1
+  sensitivity = 0.2
 }
 
 #-------------------------------------------
@@ -246,35 +246,35 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 #-- windows and workspaces
 #-------------------------------------------
 # Scratchpad
-windowrule = float, ^(__scratchpad)$
-windowrule = size 1280 720, ^(__scratchpad)$
+# windowrule = float, ^(__scratchpad)$
+# windowrule = size 1280 720, ^(__scratchpad)$
 
-# Spotify
-windowrule = float, ^(__spotify)$
-windowrule = size 1280 720, ^(__spotify)$
+# # Spotify
+windowrule = float, class:^(__spotify)$
+windowrule = size 1280 720, class:^(__spotify)$
 
-# Btop Window
-windowrule = float, ^(__btop)$
-windowrule = size 1280 720, ^(__btop)$
+# # Btop Window
+windowrule = float, class:^(__btop)$
+windowrule = size 1280 720, class:^(__btop)$
 
-# Lazygit
-windowrule = float, ^(__lazygit)$
-windowrule = size 1280 720, ^(__lazygit)$
+# # Lazygit
+windowrule = float, class:^(__lazygit)$
+windowrule = size 1280 720, class:^(__lazygit)$
 
-# Bluetui
-windowrule = float, ^(__bluetui)$
-windowrule = size 1280 720, ^(__bluetui)$
+# # Bluetui
+windowrule = float, class:^(__bluetui)$
+windowrule = size 1280 720, class:^(__bluetui)$
 
-# Lazygit
-windowrule = float, ^(__nmtui)$
-windowrule = size 1280 720, ^(__nmtui)$
+# # Lazygit
+windowrule = float, class:^(__nmtui)$
+windowrule = size 1280 720, class:^(__nmtui)$
 
-# Qucik Note
-windowrule = float, ^(__notes)$
-windowrule = size 1024 786, ^(__notes)$
+# # Qucik Note
+windowrule = float, class:^(__notes)$
+windowrule = size 1024 786, class:^(__notes)$
 
-# Wild Magic Table
-windowrule = float, ^(Wild Magic Table)
+# # Wild Magic Table
+windowrule = float, class:^(Wild Magic Table)
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
