5-2-25 reworked hyprland pc config

--- a/dotfiles/zsh/starship.toml
+++ b/dotfiles/zsh/starship.toml
@@ -10,6 +10,7 @@ $cmd_duration\
 $line_break\
 $python\
 $character"""
+command_timeout = 500
 
 [hostname]
 ssh_only = false
@@ -18,6 +19,7 @@ format = '[$ssh_symbol](#8aadf4)[$hostname](#8aadf4) '
 [directory]
 style = '#8aadf4'
 read_only_style = '#ed8796' 
+read_only = '󰌾 '
 format = '[$read_only]($read_only_style)[$path]($style)'
 truncation_length = 10
 truncation_symbol = '…/'
