--- a/dotfiles/hyprland/hypr/hyprland.conf
+++ b/dotfiles/hyprland/hypr/hyprland.conf
@@ -19,14 +19,15 @@ exec-once = nm-applet &
 #-------------------------------------------
 #-- monitors
 #-------------------------------------------
-monitor=DP-2,1920x1080@75,0x0,1
-monitor=DP-1,1920x1080@75,1920x0,1
+monitor=DP-1,1920x1080@75,0x0,1
+monitor=HDMI-A-1,1920x1080@75,1920x0,1
 
 #-------------------------------------------
 #-- program variables
 #-------------------------------------------
 $terminal = wezterm start
-$fileManager = dolphin
+$fileManager = thunar
+# $fileManager = dolphin
 $menu = rofi -show drun
 
 #-------------------------------------------
@@ -39,17 +40,17 @@ env = HYPRCURSOR_SIZE,24
 #-- look and feel
 #-------------------------------------------
 
-workspace = 1,monitor:DP-2
-workspace = 2,monitor:DP-2
-workspace = 3,monitor:DP-2
-workspace = 4,monitor:DP-2
-workspace = 5,monitor:DP-2
+workspace = 1,monitor:DP-1
+workspace = 2,monitor:DP-1
+workspace = 3,monitor:DP-1
+workspace = 4,monitor:DP-1
+workspace = 5,monitor:DP-1
 
-workspace = 6,monitor:DP-1
-workspace = 7,monitor:DP-1
-workspace = 8,monitor:DP-1
-workspace = 9,monitor:DP-1
-workspace = 10,monitor:DP-1
+workspace = 6,monitor:HDMI-A-1
+workspace = 7,monitor:HDMI-A-1
+workspace = 8,monitor:HDMI-A-1
+workspace = 9,monitor:HDMI-A-1
+workspace = 10,monitor:HDMI-A-1
 
 general {
   gaps_in = 5
@@ -251,40 +252,44 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+bind = , XF86Explorer, exec, $HOME/myrepo/myscripts/launchers/spotify.sh launch
 
 #-------------------------------------------
 #-- windows and workspaces
 #-------------------------------------------
 
-# Scratchpad
-windowrule = float, ^(__scratchpad)$
-windowrule = center, ^(__scratchpad)$
-windowrule = size 1280 720, ^(__scratchpad)$
+# # Scratchpad
+# windowrule = float, ^(__scratchpad)$
+# windowrule = center, ^(__scratchpad)$
+# windowrule = size 1280 720, ^(__scratchpad)$
+#
+# # Spotify
+# windowrule = float, ^(__spotify)$
+# windowrule = center, ^(__spotify)$
+# windowrule = size 1280 720, ^(__spotify)$
+windowrule = float, class:^(__spotify)$
+windowrule = size 1280 720, class:^(__spotify)$
+windowrule = center, class:^(__spotify)$
 
-# Spotify
-windowrule = float, ^(__spotify)$
-windowrule = center, ^(__spotify)$
-windowrule = size 1280 720, ^(__spotify)$
-
-# Btop Window
-windowrule = float, ^(__btop)$
-windowrule = center, ^(__btop)$
-windowrule = size 1280 720, ^(__btop)$
-
-# Lazygit
-windowrule = float, ^(__lazygit)$
-windowrule = center, ^(__lazygit)$
-windowrule = size 1280 720, ^(__lazygit)$
-
-# Bluetui
-windowrule = float, ^(__bluetui)$
-windowrule = center, ^(__bluetui)$
-windowrule = size 1280 720, ^(__bluetui)$
-
-# Qucik Note
-windowrule = float, ^(__notes)$
-windowrule = center, ^(__notes)$
-windowrule = size 1024 786, ^(__notes)$
+# # Btop Window
+# windowrule = float, ^(__btop)$
+# windowrule = center, ^(__btop)$
+# windowrule = size 1280 720, ^(__btop)$
+#
+# # Lazygit
+# windowrule = float, ^(__lazygit)$
+# windowrule = center, ^(__lazygit)$
+# windowrule = size 1280 720, ^(__lazygit)$
+#
+# # Bluetui
+# windowrule = float, ^(__bluetui)$
+# windowrule = center, ^(__bluetui)$
+# windowrule = size 1280 720, ^(__bluetui)$
+#
+# # Qucik Note
+# windowrule = float, ^(__notes)$
+# windowrule = center, ^(__notes)$
+# windowrule = size 1024 786, ^(__notes)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
