--- a/dotfiles/hyprland/waybar/config.jsonc
+++ b/dotfiles/hyprland/waybar/config.jsonc
@@ -1,6 +1,6 @@
 [{
   // Main Monitor
-  "output": "DP-2",
+  "output": "DP-1",
   "height": 30, // Waybar height (to be removed for auto height)
   "spacing": 4, // Gaps between modules (4px)
   "modules-left": [
@@ -116,7 +116,7 @@
 },
 {
   // Right Monitor
-  "output": "DP-1",
+  "output": "HDMI-A-1",
   "height": 30, // Waybar height (to be removed for auto height)
   "spacing": 4, // Gaps between modules (4px)
   "modules-left": [
@@ -127,6 +127,7 @@
   ],
   "modules-right": [
     "temperature",
+    "custom/gpu",
     "cpu",
     "memory",
     "disk",
@@ -182,12 +183,18 @@
   },
   "temperature": {
     // "thermal-zone": 2,
-    // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
+    "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
     "critical-threshold": 80,
     // "format-critical": "{temperatureC}°C {icon}",
     "format": "{temperatureC}°C <span foreground='#8aadf4'>{icon}</span>",
     "format-icons": ["", "", ""],
     "tooltip": false
+  },
+  "custom/gpu": {
+    "exec": "$HOME/.config/hypr/scripts/gpu-temp.sh",
+    "interval": 5,
+    "format": "{} <span foreground='#8aadf4'>󰢮 </span>",
+    "icon": "󰢮 ",
   },
   "cpu": {
     "format": "{usage}% <span foreground='#8aadf4'> </span>",
