--- a/dotfiles/i3wm/polybar/config.ini
+++ b/dotfiles/i3wm/polybar/config.ini
@@ -48,10 +48,11 @@ font-0 = "Firacode Nerd Font Mono:size=12;2"
 font-1 = "Firacode Nerd Font Mono:size=26;5"
 font-2 = "Firacode Nerd Font Mono:size=20;5"
 font-3 = "Firacode Nerd Font Mono:size=16;3"
+font-4 = "Firacode Nerd Font Propo:size=14;3"
 
 modules-left = date spacer i3 spacer files web obsidian
 modules-center = 
-modules-right = xkeyboard 3space language spacer spotify-prev spotify-play spotify-next spacer audio pulseaudio spacer powermode spacer powermenu
+modules-right = xkeyboard 3space spotify-prev spotify-play spotify-next spacer audio pulseaudio spacer powermode spacer powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -72,7 +73,6 @@ foreground = ${colors.white}
 
 line-size = 1pt
 
-
 border-bottom-size = 2
 border-color = ${colors.border}
 
@@ -83,10 +83,11 @@ font-0 = "Firacode Nerd Font Mono:size=12;2"
 font-1 = "Firacode Nerd Font Mono:size=26;5"
 font-2 = "Firacode Nerd Font Mono:size=20;5"
 font-3 = "Firacode Nerd Font Mono:size=16;3"
+font-4 = "Firacode Nerd Font Mono:size=14;3"
 
-modules-left = date spacer i3 spacer tray
-modules-center = 
-modules-right = updates-arch spacer temperature spacer cpu spacer memory spacer filesystem games storage
+modules-left = date spacer i3 spacer tray network
+modules-center =
+modules-right = updates-arch spacer temperature spacer gpu spacer cpu spacer memory spacer filesystem games storage
 
 cursor-click = pointer
 cursor-scroll = ns-resize
