--- a/dotfiles/i3wm/polybar/modules.ini
+++ b/dotfiles/i3wm/polybar/modules.ini
@@ -41,7 +41,7 @@ label-visible-foreground = ${colors.black}
 label-visible-font = 2
 
 label-urgent = %icon%
-label-urgent-foreground = ${colors.purple}
+label-urgent-foreground = ${colors.mauve}
 label-urgent-font = 2
 
 label-separator = " "
@@ -78,12 +78,24 @@ format-background = ${colors.darker}
 ramp-font = 4
 label = %temperature-c%
 label-foreground = ${colors.peach}
-label-warn-foreground = ${colors.purple}
+label-warn-foreground = ${colors.mauve}
 ramp-0 = ""
 ramp-1 = ""
 ramp-2 = ""
 ramp-foreground = ${colors.blue}
 hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon1/temp3_input
+
+[module/gpu]
+type = custom/script
+exec = ~/.config/polybar/scripts/gpu-temp.sh
+format = <label>
+format-prefix = "󰢮 "
+format-prefix-font = 3
+format-prefix-foreground = ${colors.blue}
+label = %output%
+label-foreground = ${colors.peach}
+interval = 600
+click-left = exec nvidia-settings
 
 [module/cpu]
 type = internal/cpu
@@ -140,6 +152,20 @@ format-mounted-prefix-font = 3
 label-mounted = %percentage_used%%
 label-mounted-foreground = ${colors.peach}
 label-mounted-background = ${colors.darker}
+
+[module/network]
+type = internal/network
+interface = enp6s0
+interface-type = wired
+interval = 3.0
+
+format-connected = <label-connected>
+format-disconnected = <label-disconnected>
+
+label-connected = 
+label-disconnected = 󰅛
+label-disconnected-font = 3
+label-disconnected-foreground = ${colors.red}
 
 ;================================
 ;   Audio
