--- a/dotfiles/yazi/keymap.toml
+++ b/dotfiles/yazi/keymap.toml
@@ -119,6 +119,7 @@ keymap = [
 	# Goto
 	{ on = [ "g", "h" ],       run = "cd ~",             desc = "Go to the home directory" },
 	{ on = [ "g", "c" ],       run = "cd ~/.config",     desc = "Go to the config directory" },
+	{ on = [ "g", "C" ],       run = "cd ~/Code",     desc = "Go to the Code directory" },
 	{ on = [ "g", "r" ],       run = "cd ~/myrepo",     desc = "Go to the myrepo directory" },
 	{ on = [ "g", "d" ],       run = "cd ~/Downloads",   desc = "Go to the downloads directory" },
 	{ on = [ "g", "<Space>" ], run = "cd --interactive", desc = "Go to a directory interactively" },
