--- a/dotfiles/i3wm/polybar/config.ini
+++ b/dotfiles/i3wm/polybar/config.ini
@@ -85,7 +85,7 @@ font-2 = "Firacode Nerd Font Mono:size=20;5"
 font-3 = "Firacode Nerd Font Mono:size=16;3"
 font-4 = "Firacode Nerd Font Mono:size=14;3"
 
-modules-left = date spacer i3 spacer tray network
+modules-left = date spacer i3 spacer tray 1space network
 modules-center =
 modules-right = updates-arch spacer temperature spacer gpu spacer cpu spacer memory spacer filesystem games storage
 
