--- a/dotfiles/i3wm/polybar/modules.ini
+++ b/dotfiles/i3wm/polybar/modules.ini
@@ -354,6 +354,11 @@ format-foreground = ${colors.border}
 label = " ⏽ "
 label-font = 4
 
+[module/1space]
+type = custom/text
+format = <label>
+label = " "
+
 [module/3space]
 type = custom/text
 format = <label>
