--- a/dotfiles/applications/yazi.desktop
+++ b/dotfiles/applications/yazi.desktop
@@ -4,7 +4,7 @@ Type=Application
 Version=1.0
 Name=Yazi
 Comment=A Tui File Manager
-Exec=wezterm start yazi
+Exec=wezterm start --class="__yazi" yazi
 Icon=
 Terminal=false
 Categories=Utility;
