--- a/dotfiles/applications/scripts/btop.desktop
+++ b/dotfiles/applications/scripts/btop.desktop
@@ -2,9 +2,9 @@
 
 Type=Application
 Version=1.0
-Name=Notes
-Comment=Notes Menu
-Exec=/home/john/myrepo/myscripts/bash/rofi/notes.sh
+Name=Btop
+Comment=Btop Tui
+Exec=/home/john/myrepo/myscripts/launchers/launcher.sh btop
 Icon=
 Terminal=false
 Categories=Utility;
