--- a/dotfiles/hyprland/hypr/hyprland.conf
+++ b/dotfiles/hyprland/hypr/hyprland.conf
@@ -14,7 +14,9 @@ exec-once = waybar &
 exec-once = hyprpaper &
 exec-once = hypridle &
 
-exec-once = nm-applet &
+exec-once = lxsession &
+exec-once = steam -silent &
+exec-once = discord --start-minimized &
 
 #-------------------------------------------
 #-- monitors
@@ -27,7 +29,6 @@ monitor=HDMI-A-1,1920x1080@75,1920x0,1
 #-------------------------------------------
 $terminal = wezterm start
 $fileManager = thunar
-# $fileManager = dolphin
 $menu = rofi -show drun
 
 #-------------------------------------------
@@ -35,6 +36,13 @@ $menu = rofi -show drun
 #-------------------------------------------
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+env = QT_QPA_PLATFORM,wayland
+env = QT_QPA_PLATFORMTHEME,qt6ct
+# env = QT_STYLE_OVERRIDE,kvantum
 
 #-------------------------------------------
 #-- look and feel
@@ -135,6 +143,7 @@ master {
 misc {
   force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
   disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+mouse_move_focuses_monitor = false
 }
 
 #-------------------------------------------
@@ -157,7 +166,7 @@ gestures {
 cursor {
   no_hardware_cursors = true
   no_warps = true
-  default_monitor = DP-2
+  default_monitor = DP-1
 }
 
 device {
@@ -182,15 +191,19 @@ bind = $mainMod Control, backspace, exec, /home/john/.config/hypr/scripts/reset-
 
 # Applications
 bind = $mainMod, space, exec, $menu
+bind = $mainMod Control, space, exec, $HOME/myrepo/myscripts/launchers/finder.sh
 bind = $mainMod, return, exec, $terminal
-bind = $mainMod Control, return, exec, wezterm --config-file ~/.config/wezterm/wezterm-float.lua start --class="__scratchpad"
+# bind = $mainMod Control, return, exec, wezterm --config-file ~/.config/wezterm/wezterm-float.lua start --class="__scratchpad"
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, exec, firefox
-bind = $mainMod, N, exec, wezterm --config-file ~/.config/wezterm/wezterm-float.lua start --class="__notes" nvim $HOME/Documents/obsidian-sync/Notes/_quick.md
+bind = $mainMod, I, exec, $HOME/myrepo/myscripts/launchers/launcher.sh btop
+bind = $mainMod, N, exec, wezterm start --class="__notes" nvim $HOME/Documents/obsidian-sync/notes/_quick.md
 
 # Window control
 bind = $mainMod, S, togglefloating,
 bind = $mainMod, A, fullscreen, 1
+bind = $mainMod, F, fullscreen, 0
+bind = $mainMod, D, exec, $(hyprctl activewindow -j | jq '.floating') && hyprctl dispatch cyclenext tiled || hyprctl dispatch cyclenext floating
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
@@ -230,6 +243,7 @@ bind = $mainMod Control Shift, 5, movetoworkspace, 10
 
 # Move between monitors
 bind = $mainMod, O, movewindow, mon:+1
+bind = $mainMod, grave, movewindow, mon:+1
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -263,33 +277,32 @@ bind = , XF86Explorer, exec, $HOME/myrepo/myscripts/launchers/spotify.sh launch
 # windowrule = center, ^(__scratchpad)$
 # windowrule = size 1280 720, ^(__scratchpad)$
 #
-# # Spotify
-# windowrule = float, ^(__spotify)$
-# windowrule = center, ^(__spotify)$
-# windowrule = size 1280 720, ^(__spotify)$
+# Spotify
 windowrule = float, class:^(__spotify)$
 windowrule = size 1280 720, class:^(__spotify)$
 windowrule = center, class:^(__spotify)$
 
-# # Btop Window
-# windowrule = float, ^(__btop)$
-# windowrule = center, ^(__btop)$
-# windowrule = size 1280 720, ^(__btop)$
-#
-# # Lazygit
-# windowrule = float, ^(__lazygit)$
-# windowrule = center, ^(__lazygit)$
-# windowrule = size 1280 720, ^(__lazygit)$
-#
-# # Bluetui
-# windowrule = float, ^(__bluetui)$
-# windowrule = center, ^(__bluetui)$
-# windowrule = size 1280 720, ^(__bluetui)$
-#
-# # Qucik Note
-# windowrule = float, ^(__notes)$
-# windowrule = center, ^(__notes)$
-# windowrule = size 1024 786, ^(__notes)$
+# Btop Window
+windowrule = float, class:^(__btop)$
+windowrule = center, class:^(__btop)$
+windowrule = size 1280 720, class:^(__btop)$
+
+# Lazygit
+windowrule = float, class:^(__lazygit)$
+windowrule = center, class:^(__lazygit)$
+windowrule = size 1280 720, class:^(__lazygit)$
+
+# Bluetui
+windowrule = float, class:^(__bluetui)$
+windowrule = center, class:^(__bluetui)$
+windowrule = size 1280 720, class:^(__bluetui)$
+
+# Qucik Note
+windowrule = float, class:^(__notes)$
+windowrule = center, class:^(__notes)$
+windowrule = size 1024 786, class:^(__notes)$
+
+# discord
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
