--- a/dotfiles/hyprland/hypr/hyprland.conf
+++ b/dotfiles/hyprland/hypr/hyprland.conf
@@ -18,6 +18,9 @@ exec-once = lxsession &
 exec-once = steam -silent &
 exec-once = discord --start-minimized &
 
+exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+
 #-------------------------------------------
 #-- monitors
 #-------------------------------------------
@@ -196,6 +199,7 @@ bind = $mainMod, return, exec, $terminal
 # bind = $mainMod Control, return, exec, wezterm --config-file ~/.config/wezterm/wezterm-float.lua start --class="__scratchpad"
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, exec, firefox
+bind = $mainMod Control, W, exec, firefox --private-window
 bind = $mainMod, I, exec, $HOME/myrepo/myscripts/launchers/launcher.sh btop
 bind = $mainMod, N, exec, wezterm start --class="__notes" nvim $HOME/Documents/obsidian-sync/notes/_quick.md
 
@@ -216,6 +220,12 @@ bind = $mainMod Control, h, movewindow, l
 bind = $mainMod Control, j, movewindow, d
 bind = $mainMod Control, k, movewindow, u
 bind = $mainMod Control, l, movewindow, r
+
+# Resize window with focus
+bind = $mainMod Shift, h, resizeactive, -100 0
+bind = $mainMod Shift, j, resizeactive, 0 100
+bind = $mainMod Shift, k, resizeactive, 0 -100
+bind = $mainMod Shift, l, resizeactive, 100 0
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -244,6 +254,7 @@ bind = $mainMod Control Shift, 5, movetoworkspace, 10
 # Move between monitors
 bind = $mainMod, O, movewindow, mon:+1
 bind = $mainMod, grave, movewindow, mon:+1
+bind = $mainMod, Tab, focusmonitor, +1
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
