--- a/dotfiles/hyprland/hypr/hypridle.conf
+++ b/dotfiles/hyprland/hypr/hypridle.conf
@@ -14,12 +14,12 @@ general {
     ignore_systemd_inhibit = false            # whether to ignore systemd-inhibit --what=idle inhibitors
 }
 
-listener {
-    timeout = 240                             # in seconds
-    on-timeout = loginctl lock-session        # command to run when timeout has passed
-}
+# listener {
+#     timeout = 240                             # in seconds
+#     on-timeout = loginctl lock-session        # command to run when timeout has passed
+# }
 
 listener {
-  timeout = 300
+  timeout = 1200
   on-timeout = systemctl suspend              # command to run when timeout has passed
 }
