--- a/dotfiles/hyprland/hypr/hyprland.conf
+++ b/dotfiles/hyprland/hypr/hyprland.conf
@@ -66,7 +66,7 @@ workspace = 10,monitor:HDMI-A-1
 general {
   gaps_in = 5
   gaps_out = 10
-  border_size = 1
+  border_size = 2
   col.active_border = rgb(8aadf4)
   resize_on_border = false
   allow_tearing = false
@@ -75,13 +75,13 @@ general {
 }
 
 decoration {
-  rounding = 10
+  rounding = 6
   active_opacity = 1.0
   inactive_opacity = 1.0
 
   shadow {
     enabled = true
-    range = 4
+    range = 10
     render_power = 3
     color = rgba(1a1a1aee)
   }
@@ -96,30 +96,19 @@ decoration {
 }
 
 animations {
-  enabled = yes, please :)
-
-  bezier = easeOutQuint,0.23,1,0.32,1
-  bezier = easeInOutCubic,0.65,0.05,0.36,1
-  bezier = linear,0,0,1,1
-  bezier = almostLinear,0.5,0.5,0.75,1.0
-  bezier = quick,0.15,0,0.1,1
-
-  animation = global, 1, 10, default
-  animation = border, 1, 5.39, easeOutQuint
-  animation = windows, 1, 4.79, easeOutQuint
-  animation = windowsIn, 1, 4.1, easeOutQuint, popin 10%
-  animation = windowsOut, 1, 1.49, linear, popin 10%
-  animation = fadeIn, 1, 1.73, almostLinear
-  animation = fadeOut, 1, 1.46, almostLinear
-  animation = fade, 1, 3.03, quick
-  animation = layers, 1, 3.81, easeOutQuint
-  animation = layersIn, 1, 4, easeOutQuint, fade
-  animation = layersOut, 1, 1.5, linear, fade
-  animation = fadeLayersIn, 1, 1.79, almostLinear
-  animation = fadeLayersOut, 1, 1.39, almostLinear
-  animation = workspaces, 1, 1.94, almostLinear, fade
-  animation = workspacesIn, 1, 1.21, almostLinear, slide
-  animation = workspacesOut, 1, 1.94, almostLinear, slide
+enabled = true
+    bezier = wind, 0.05, 0.9, 0.1, 1.05
+    bezier = winIn, 0.1, 1.1, 0.1, 1.1
+    bezier = winOut, 0.3, -0.3, 0, 1
+    bezier = liner, 1, 1, 1, 1
+    animation = windows, 1, 6, wind, slide
+    animation = windowsIn, 1, 6, winIn, slide top
+    animation = windowsOut, 1, 5, winOut, slide
+    animation = windowsMove, 1, 5, wind, slide
+    animation = border, 1, 1, liner
+    animation = borderangle, 1, 30, liner, loop
+    animation = fade, 1, 10, default
+    animation = workspaces, 1, 5, wind
 }
 
 # "Smart gaps" / "No gaps when only"
