--- a/dotfiles/hyprland/waybar/backup/config.jsonc
+++ b/dotfiles/hyprland/waybar/backup/config.jsonc
@@ -1,128 +1,111 @@
-{
+[{
+	// -------------
+  // Main Monitor
+	// -------------
+  "output": "DP-1",
   "height": 30, // Waybar height (to be removed for auto height)
   "spacing": 4, // Gaps between modules (4px)
   "modules-left": [
-    "hyprland/workspaces",
-    "custom/pacman",
-  ],
-  "modules-center": [
     "clock",
+    "hyprland/workspaces",
+    "custom/divider",
+    "custom/files",
+    "custom/web",
+    "custom/obsidian",
+		"network",
   ],
   "modules-right": [
-    "mpd",
+		"keyboard-state",
+		"custom/prev",
+		"custom/play",
+		"custom/next",
+    "custom/sep",
+		"custom/clip",
+    "custom/sep",
     "pulseaudio",
-    "temperature",
-    "cpu",
-    "memory",
-    "disk",
-    "backlight",
-    "network",
-    "battery",
-    "tray",
+    "custom/sep",
     "idle_inhibitor",
+    "custom/sep",
     "custom/power"
   ],
-  "custom/pacman": {
-    "interval": 60,
-    "exec": "checkupdates | wc -l",
-    "format": "<span foreground='#e0af68'></span> {}"
-  },
   "clock": {
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
     "format": "{:%a, %b %d - %I:%M}",
   },
-  "mpd": {
-    "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
-    "format-disconnected": "Disconnected ",
-    "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
-    "unknown-tag": "N/A",
-    "interval": 5,
-    "consume-icons": {
-        "on": " "
-    },
-    "random-icons": {
-        "off": "<span color=\"#f53c3c\"></span> ",
-        "on": " "
-    },
-    "repeat-icons": {
-        "on": " "
-    },
-    "single-icons": {
-        "on": "1 "
-    },
-    "state-icons": {
-        "paused": "",
-        "playing": ""
-    },
-    "tooltip-format": "MPD (connected)",
-    "tooltip-format-disconnected": "MPD (disconnected)"
-  },
-        "car": "",
-  "pulseaudio": {
-    // "scroll-step": 1, // %, can be a float
-    "format": "{volume}% <span foreground='#e0af68'>{icon}</span>",
-    "format-bluetooth": "{volume}% {icon} {format_source}",
-    "format-bluetooth-muted": " {icon} {format_source}",
-    "format-source": "{volume}% ",
-    "format-source-muted": "",
+  "hyprland/workspaces": {
+    "format": "{icon}",
     "format-icons": {
-        "headphone": "",
-        "hands-free": "",
-        "headset": "",
-        "default": [" ", " ", " "]
+      "1": "󰎤",
+      "2": "󰎧",
+      "3": "󰎪",
+      "4": "󰎭",
+      "5": "󰎱",
     },
-    "on-click": "pactl set-sink-mute @DEFAULT_SINK@ toggle"
   },
-  "temperature": {
-    // "thermal-zone": 2,
-    // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-    "critical-threshold": 80,
-    // "format-critical": "{temperatureC}°C {icon}",
-    "format": "{temperatureC}°C <span foreground='#e0af68'>{icon}</span>",
-    "format-icons": ["", "", ""],
-    "tooltip": false
+  "custom/divider": {
+    "format": "⏽",
   },
-  "cpu": {
-    "format": "{usage}% <span foreground='#e0af68'></span>",
+  "custom/sep": {
+    "format": "",
   },
-  "memory": {
-    "format": "{used}GB <span foreground='#e0af68'></span>",
-    "tooltip": false
+	"custom/files": {
+		"format": "",
+		"tooltip": false,
+		"on-click": "thunar",
+	},
+  "custom/web": {
+    "format": "󰖟",
+		"tooltip": false,
+    "on-click": "firefox",
   },
-  "disk": {
-    "format": "{percentage_used}% <span foreground='#e0af68'>󰋊</span>"
+  "custom/obsidian": {
+    "format": "",
+		"tooltip": false,
+    "on-click": "obsidian",
+  },
+	"network": {
+		"format-ethernet": "",
+		"format-disconnected": "no net",
+	},
+	"keyboard-state": {
+		"numlock": false,
+		"capslock": true,
+		"format": "{icon}",
+		"format-icons": {
+			"locked": " Caps ",
+			"unlocked": " ",
+		}
+	},
+  "custom/prev": {
+    "format": "󰙤",
+    "on-click":"spotify_player playback previous",
+		"tooltip": false,
+  },
+  "custom/play": {
+    "format": "",
+    "on-click": "spotify_player playback play-pause",
+		"tooltip": false,
+  },
+  "custom/next": {
+    "format": "󰙢",
+    "on-click": "spotify_player playback next",
+		"tooltip": false,
+  },
+	"custom/clip": {
+		"format": "󰨸",
+		"on-click": "cliphist list | rofi -dmenu | cliphist decode | wl-copy",
+		"tooltip": false,
+	},
+  "pulseaudio": {
+    "scroll-step": 5, // %, can be a float
+    "format": "{icon} <span foreground='#f5a97f'>{volume}%</span>",
+    "format-icons": {
+        "alsa_output.usb-Logitech_PRO_000000000000-00.analog-stereo": "",
+        "alsa_output.pci-0000_09_00.4.analog-stereo": "󰓃",
     },
-  "backlight": {
-    "format": "{percent}% <span foreground='#e0af68'>{icon}</span>",
-    "format-icons": ["", "", "", "", "", "", "", "", ""],
-    "tooltip": false
-  },
-  "network": {
-    // "interface": "wlp2*", // (Optional) To force the use of this interface
-    "format-wifi": "{essid} ({signalStrength}%) <span foreground='#e0af68'></span>",
-    "tooltip-format": "{ifname} via {gwaddr} ",
-    "format-linked": "{ifname} (No IP) ",
-    "format-disconnected": "Disconnected ⚠",
-    "on-click": "nm-connection-editor"
-  },
-  "battery": {
-    "states": {
-        // "good": 95,
-        "warning": 30,
-        "critical": 15
-    },
-    "format": "{capacity}% <span foreground='#e0af68'>{icon}</span>",
-    "format-full": "{capacity}% {icon}",
-    "format-charging": "{capacity}% ",
-    "format-plugged": "{capacity}% ",
-    "format-alt": "{time} {icon}",
-    // "format-good": "", // An empty format will hide the module
-    // "format-full": "",
-    "format-icons": ["", "", "", "", ""]
-  },
-  "tray": {
-    // "icon-size": 21,
-    "spacing": 10
+
+    "on-click": "~/myrepo/myscripts/audio.sh swap",
+    "on-click-right": "pactl set-sink-mute @DEFAULT_SINK@ toggle"
   },
   "idle_inhibitor": {
     "format": "{icon}",
@@ -132,7 +115,105 @@
     }
   },
   "custom/power": {
-    "format" : " ⏻  ",
-    "on-click": "wlogout"
-  }
-}
+    "format": " ⏻ ",
+    "on-click": "wlogout -b 5",
+		"tooltip": false,
+  },
+},
+{
+	// -------------
+  // Right Monitor
+	// -------------
+  "output": "HDMI-A-1",
+  "height": 30, // Waybar height (to be removed for auto height)
+  "spacing": 4, // Gaps between modules (4px)
+  "modules-left": [
+    "clock",
+    "hyprland/workspaces",
+    "custom/divider",
+    "tray"
+  ],
+  "modules-right": [
+		"custom/pacman",
+		"custom/sep",
+    "temperature",
+		"custom/sep",
+    "custom/gpu",
+		"custom/sep",
+    "cpu",
+		"custom/sep",
+    "memory",
+		"custom/sep",
+    "disk",
+		"custom/sep",
+    "disk#games",
+		"custom/sep",
+    "disk#storage",
+  ],
+  "clock": {
+    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+    "format": "{:%a, %b %d - %I:%M}",
+  },
+  "hyprland/workspaces": {
+    "format": "{icon}",
+    "format-icons": {
+      "6": "󰎤",
+      "7": "󰎧",
+      "8": "󰎪",
+      "9": "󰎭",
+      "10": "󰎱",
+    },
+  },
+  "custom/divider": {
+    "format": "⏽",
+  },
+  "custom/sep": {
+    "format": "",
+  },
+  "tray": {
+    "icon-size": 20,
+    "spacing": 10,
+    "show-passive-items": true
+  },
+  "custom/pacman": {
+    "interval": 180,
+    "exec": "checkupdates | wc -l",
+    "format": "<span foreground='#8aadf4'>󰮯</span> {}",
+    "tooltip-format": "{} Packages Ready to Install",
+  },
+  "temperature": {
+    // "thermal-zone": 2,
+    "hwmon-path": "/sys/class/hwmon/hwmon1/temp1_input",
+    "critical-threshold": 80,
+    // "format-critical": "{temperatureC}°C {icon}",
+    "format": "<span foreground='#8aadf4'>{icon}</span> {temperatureC}°C",
+    "format-icons": ["", "", ""],
+    "tooltip": false,
+  },
+  "custom/gpu": {
+    "exec": "$HOME/.config/hypr/scripts/gpu-temp.sh",
+    "interval": 5,
+    "format": "<span foreground='#8aadf4'>󰢮</span> {}",
+    "tooltip": false,
+  },
+  "cpu": {
+    "format": "<span foreground='#8aadf4'></span> {usage}%",
+    "tooltip": false,
+  },
+  "memory": {
+    "format": "<span foreground='#8aadf4'></span> {used}GB",
+    "tooltip": false
+  },
+  "disk": {
+    "format": "<span foreground='#8aadf4'>󰋊</span> {percentage_used}%",
+    "path": "/",
+    },
+  "disk#games": {
+    "format": "<span foreground='#8aadf4'></span> {percentage_used}%",
+    "path": "/mnt/Games/",
+    },
+  "disk#storage": {
+    "format": "<span foreground='#8aadf4'></span> {percentage_used}%",
+    "path": "/mnt/Storage/",
+    },
+}]
