after nvim lsp rework

--- a/dotfiles/hyprland/hypr/hyprland.conf
+++ b/dotfiles/hyprland/hypr/hyprland.conf
@@ -185,12 +185,13 @@ bind = $mainMod Control, backspace, exec, /home/john/.config/hypr/scripts/reset-
 bind = $mainMod, space, exec, $menu
 bind = $mainMod Control, space, exec, $HOME/myrepo/myscripts/launchers/finder.sh
 bind = $mainMod, return, exec, $terminal
-# bind = $mainMod Control, return, exec, wezterm --config-file ~/.config/wezterm/wezterm-float.lua start --class="__scratchpad"
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, exec, firefox
 bind = $mainMod Control, W, exec, firefox --private-window
 bind = $mainMod, I, exec, $HOME/myrepo/myscripts/launchers/launcher.sh btop
 bind = $mainMod, N, exec, wezterm start --class="__notes" nvim $HOME/Documents/obsidian-sync/notes/_quick.md
+bind = $mainMod, C, exec, gnome-calculator
+bind = , print, exec, hyprshot -m region --clipboard-only
 
 # Window control
 bind = $mainMod, S, togglefloating,
@@ -297,12 +298,15 @@ windowrule = float, class:^(__bluetui)$
 windowrule = center, class:^(__bluetui)$
 windowrule = size 1280 720, class:^(__bluetui)$
 
-# Qucik Note
+# Quick Note
 windowrule = float, class:^(__notes)$
 windowrule = center, class:^(__notes)$
 windowrule = size 1024 786, class:^(__notes)$
 
-# discord
+# Calculator
+windowrule = float, class:^(org.gnome.Calculator)$
+windowrule = center, class:^(org.gnome.Calculator)$
+
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
